// Original file: /home/fernando/Documents/abklabs/yellowstone-vixen/crates/proto/proto/solana-token/ixs.proto


export interface FreezeAccountAccountsProto {
  'account'?: (string);
  'mint'?: (string);
  'mintFreezeAuthority'?: (string);
  'multisigSigners'?: (string)[];
}

export interface FreezeAccountAccountsProto__Output {
  'account': (string);
  'mint': (string);
  'mintFreezeAuthority': (string);
  'multisigSigners': (string)[];
}
