// Original file: /home/fernando/Documents/abklabs/yellowstone-vixen/crates/proto/proto/solana-token/ixs.proto


export interface MintToAccountsProto {
  'mint'?: (string);
  'account'?: (string);
  'mintAuthority'?: (string);
  'multisigSigners'?: (string)[];
}

export interface MintToAccountsProto__Output {
  'mint': (string);
  'account': (string);
  'mintAuthority': (string);
  'multisigSigners': (string)[];
}
