// Original file: /home/fernando/Documents/abklabs/yellowstone-vixen/crates/proto/proto/solana-token/ixs.proto


export interface ThawAccountAccountsProto {
  'account'?: (string);
  'mint'?: (string);
  'mintFreezeAuthority'?: (string);
  'multisigSigners'?: (string)[];
}

export interface ThawAccountAccountsProto__Output {
  'account': (string);
  'mint': (string);
  'mintFreezeAuthority': (string);
  'multisigSigners': (string)[];
}
